# Night-watch-OS

./: .gitignore  README.md  nightwatch.toml  pyproject.toml
nightwatch/: __main__.py  app.py  backup.py  cli.py  config.py  db.py  migrate.py  models.py  schemas.py  services.py  settings.py  system_watch.py
nightwatch/migrations/: 0001_initial.sql
nightwatch/static/: app.css  app.js  index.html
