[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nightwatch-os-dashboard"
version = "0.1.0"
description = "Nightwatch OS Dashboard — a minimalist local-first command-center for overnight operators."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.10.0",
  "psutil>=6.1.0",
]

[project.scripts]
nightwatch = "nightwatch.__main__:main"

[tool.setuptools]
packages = ["nightwatch"]

[tool.setuptools.package-data]
nightwatch = ["static/*"]

